--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "hashids/hashids": "^5.0",
         "intervention/image": "^3.8",
         "laravel/framework": "^11.9",
+        "laravel/horizon": "^5.29",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
     },
