--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/horizon": "^5.29",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "opcodesio/log-viewer": "^3.11"
+        "opcodesio/log-viewer": "^3.11",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
